[package]
name = "onto"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Gruner <jogru0@gmail.com>"]
description = "Tool to help rebasing branches on rebased branches."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jogru0/onto"
readme = "README.md"
keywords = ["git", "rebase", "onto", "git", "cli"]
categories = ["command-line-utilities", "algorithms"]
exclude = [".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
git2 = "0.18.3"
log = "0.4.21"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
